openpearl-code/testsuite/must_not_compile/00_basics/001_no_module_statement.expect
001_no_module_statement.prl:1:7: ERROR : Syntax error :mismatched input 'PROBLEM' expecting 'MODULE'
PROBLEM;
      ^
